struckdown/tests/snapshots/test_snapshots__html@directives.md.snap
---
source: struckdown/tests/test_snapshots.rs
expression: html
input_file: struckdown/tests/inputs/directives.md
---
<p>Example directive with nested parsing:</p>
<div class="directive-video"><pre>Raw body content that goes with the directive.

```{nested} nested-inline-argument
This is an inline directive without front-matter arguments.
```
</pre></div><p>Invalid front matter:</p>
<div class="directive-invalid"><pre>---
[[[[
---
stuff
</pre></div>
