struckdown/tests/snapshots/test_snapshots__html@ext_autoanchors.md.snap
---
source: struckdown/tests/test_snapshots.rs
expression: html
input_file: struckdown/tests/inputs/ext_autoanchors.md
---
<h1 id="heading-1">Heading 1</h1>
<p>Text 1</p>
<h1 id="manual-id">Heading 2</h1>
<p>Text 2</p>
<h1 id="heading-3">Heading 3</h1>
<p>Text 3</p>

