struckdown/tests/snapshots/test_snapshots__html@ext_cat.md.snap
---
source: struckdown/tests/test_snapshots.rs
expression: html
input_file: struckdown/tests/inputs/ext_cat.md
---
<p>Hello <strong>World</strong>!</p>

