struckdown/tests/snapshots/test_snapshots__html@ext_perl.md.snap
---
source: struckdown/tests/test_snapshots.rs
expression: html
input_file: struckdown/tests/inputs/ext_perl.md
---
<p>Hello <strong>Stuff</strong>!</p>

